Use more suitable English

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -288,7 +288,7 @@
     ]
     ```
 
-  * If white space existed in the front of highlight target charcters.
+  * If white space existed in the front of highlight target charcters as below.
 
     We expected that Groonga returned `" <span class=\"keyword\">山</span>田太郎"`.
     However, Groonga returned `" <span class=\"keyword\">山</span>"` as below.
