--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,3 +1,9 @@
+groonga (14.0.3-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Horimoto Yasuhiro <horimoto@clear-code.com>  Thu, 09 May 2024 05:58:52 -0000
+
 groonga (14.0.2-1) unstable; urgency=low
 
   * New upstream release.
