doc news: fix typos

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -98,7 +98,7 @@
 
 ### Fixes
 
-* [{doc}`/reference/commands/request_cancel`] Fix a bug that Groonga may crash when we execute `request_cancel` command whlie we execute the other query.
+* [{doc}`/reference/commands/request_cancel`] Fix a bug that Groonga may crash when we execute `request_cancel` command while we execute the other query.
 
 * Fixed the unexpected error when using `--post_filter` with `--offset` greater than the post-filtered result
 
@@ -193,7 +193,7 @@
 
 * Fixed a bug that highlight position slipped out of place in the following cases.
 
-  * If full width space existed before highlight target charcters as below.
+  * If full width space existed before highlight target characters as below.
 
     We expected that Groonga returned `"Groonga　<span class=\"keyword\">高</span>速！"`.
     However, Groonga returned `"Groonga　<span class=\"keyword\">高速</span>！"` as below.
@@ -241,7 +241,7 @@
     ]
     ```
 
-  * If we used `TokenNgram("loose_blank", true)` and if highlight target charcters included full width space as below.
+  * If we used `TokenNgram("loose_blank", true)` and if highlight target characters included full width space as below.
 
     We expected that Groonga returned `"<span class=\"keyword\">山田 太郎</span>"`.
     However, Groonga returned `"<span class=\"keyword\">山田 太</span>"` as below.
@@ -288,7 +288,7 @@
     ]
     ```
 
-  * If white space existed in the front of highlight target charcters as below.
+  * If white space existed in the front of highlight target characters as below.
 
     We expected that Groonga returned `" <span class=\"keyword\">山</span>田太郎"`.
     However, Groonga returned `" <span class=\"keyword\">山</span>"` as below.
@@ -337,7 +337,7 @@
     ]
     ```
 
-  * If the second charcter of highlight target was full width space as below.
+  * If the second character of highlight target was full width space as below.
 
     We expected that Groonga returned `"<span class=\"keyword\">山　田</span>太郎"`.
     However, Groonga returned `"<span class=\"keyword\">山　田太</span>郎"` as below.
