doc news: fix a typo

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -189,7 +189,7 @@
   ]
   ```
 
-* Fixed a bug that rehash failed or data in a table broke when rehash occured that the table with `TABLE_HASH_KEY` has  2^28 or more records.
+* Fixed a bug that rehash failed or data in a table broke when rehash occurred that the table with `TABLE_HASH_KEY` has  2^28 or more records.
 
 * Fixed a bug that highlight position slipped out of place in the following cases.
 
