--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -3,8 +3,6 @@
 (release-14-0-4)=
 ## Release 14.0.4 - 2024-05-29
 
-### Improvements
-
 ### Fixes
 
 * [{doc}`/reference/functions/query_parallel_or`] Fixed a bug where the `match_escalation_threshold` or `force_match_escalation` options were ignored when using `query_parallel_or`.
@@ -55,6 +53,32 @@
       ]
     ]
   ]
+  ```
+
+* Fixed a bug where full-text search on a reference column of a vector didn't work.
+
+  * For exampe, before the fix, Groonga always returned 0 hits when performing full-text search on a reference column of a vector. Internally, this happened because Groonga couldn't correctly retrieve `key_type` for reference columns.
+
+  ```
+  table_create bugs TABLE_PAT_KEY UInt32
+
+  table_create tags TABLE_PAT_KEY ShortText --default_tokenizer TokenDelimit
+  column_create tags name COLUMN_SCALAR ShortText
+
+  column_create bugs tags COLUMN_VECTOR tags
+
+  load --table bugs
+  [
+  ["_key", "tags"],
+  [1, "Linux MySQL"],
+  [2, "MySQL Groonga"],
+  [3, "Mroonga"]
+  ]
+
+  column_create tags bugs_tags_index COLUMN_INDEX bugs tags
+
+  select --table bugs --filter 'tags @ "MySQL"'
+  [[0,0.0,0.0],[[[0],[["_id","UInt32"],["_key","UInt32"],["tags","tags"]]]]]
   ```
 
 (release-14-0-3)=
