Remove needless list

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -7,7 +7,7 @@
 
 * [{doc}`/reference/functions/query_parallel_or`] Fixed a bug where the `match_escalation_threshold` or `force_match_escalation` options were ignored when using `query_parallel_or`.
 
-  * For example, before the fix, even when `match_escalation_threshold` was set to disable match escalation, the results still escalated.
+  For example, before the fix, even when `match_escalation_threshold` was set to disable match escalation, the results still escalated.
 
   ```
   #$GRN_QUERY_PARALLEL_OR_N_CONDITIONS_THRESHOLD=1
@@ -57,7 +57,7 @@
 
 * Fixed a bug where full-text search on a reference column of a vector didn't work.
 
-  * For exampe, before the fix, Groonga always returned 0 hits when performing full-text search on a reference column of a vector. Internally, this happened because Groonga couldn't correctly retrieve `key_type` for reference columns.
+  For exampe, before the fix, Groonga always returned 0 hits when performing full-text search on a reference column of a vector. Internally, this happened because Groonga couldn't correctly retrieve `key_type` for reference columns.
 
   ```
   table_create bugs TABLE_PAT_KEY UInt32
