--- a/doc/locale/ja/LC_MESSAGES/news/14.po
+++ b/doc/locale/ja/LC_MESSAGES/news/14.po
@@ -20,7 +20,7 @@ msgstr "お知らせ - 14系"
 msgid "Fixes"
 msgstr "修正"
 
-msgid "[{doc}`/reference/functions/query_parallel_or`] Fixed a bug where the `match_escalation_threshold` or `force_match_escalation` options were ignored when using `query_parallel_or`."
+msgid "[{doc}`/reference/functions/query_parallel_or`] Fixed a bug where the [{ref}`select-match-escalation-threshold`] or `force_match_escalation` options were ignored when using `query_parallel_or`."
 msgstr ""
 
 msgid "For example, before the fix, even when `match_escalation_threshold` was set to disable match escalation, the results still escalated."
