--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -5,7 +5,7 @@
 
 ### Fixes
 
-* [{doc}`/reference/functions/query_parallel_or`] Fixed a bug where the `match_escalation_threshold` or `force_match_escalation` options were ignored when using `query_parallel_or`.
+* [{doc}`/reference/functions/query_parallel_or`] Fixed a bug where the [{ref}`select-match-escalation-threshold`] or `force_match_escalation` options were ignored when using `query_parallel_or`.
 
   For example, before the fix, even when `match_escalation_threshold` was set to disable match escalation, the results still escalated.
 
