Use more suitable example

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -7,53 +7,48 @@
 
 * [{doc}`/reference/functions/query_parallel_or`] Fixed a bug where the [{ref}`select-match-escalation-threshold`] or `force_match_escalation` options were ignored when using `query_parallel_or`.
 
-  For example, before the fix, even when `match_escalation_threshold` was set to disable match escalation, the results still escalated.
+  Before the fix, even when `match_escalation_threshold` was set to disable match escalation, the results still escalated.
+  This problem occured only `query_parallel_or()`. `query()` didn't occur this problem.
+
+  Generally, we don't disable match escalation. Because we want to get something search results. The number of hits is 0 is the unwelcome result of us. 
+  Therefore, this problem has no effect by many users. However, it has effect by user who use stop word as below.
 
   ```
-  #$GRN_QUERY_PARALLEL_OR_N_CONDITIONS_THRESHOLD=1
-  #$GRN_QUERY_PARALLEL_OR_N_THREADS_LIMIT=2
+  plugin_register token_filters/stop_word
 
-  table_create Data TABLE_NO_KEY
-  column_create Data content COLUMN_SCALAR ShortText
+  table_create Memos TABLE_NO_KEY
+  column_create Memos content COLUMN_SCALAR ShortText
 
-  load --table Data
+  table_create Terms TABLE_PAT_KEY ShortText \
+    --default_tokenizer TokenBigram \
+    --normalizer NormalizerAuto \
+    --token_filters TokenFilterStopWord
+  column_create Terms memos_content COLUMN_INDEX|WITH_POSITION Memos content
+  column_create Terms is_stop_word COLUMN_SCALAR Bool
+  load --table Terms
   [
-  {"content": "hello world"},
-  {"content": "It's an apple"}
+  {"_key": "and", "is_stop_word": true}
   ]
 
-  table_create Terms TABLE_PAT_KEY ShortText   --normalizers NormalizerNFKC150   --default_tokenizer TokenNgram
-  column_create Terms data_content COLUMN_INDEX|WITH_POSITION Data content
-  select Data   --filter 'query_parallel_or(["content"], "a")'   --match_escalation_threshold -1
+  load --table Memos
   [
-    [
-      0,
-      0.0,
-      0.0
-    ],
-    [
-      [
-        [
-          1
-        ],
-        [
-          [
-            "_id",
-            "UInt32"
-          ],
-          [
-            "content",
-            "ShortText"
-          ]
-        ],
-        [
-          2,
-          "It's an apple"
-        ]
-      ]
-    ]
+  {"content": "Hello"},
+  {"content": "Hello and Good-bye"},
+  {"content": "Good-bye"}
   ]
+
+  select Memos \
+    --filter 'query_parallel_or(["content", "content", "content", "content"], \
+              "and", \
+              {"options": {"TokenFilterStopWord.enable": true}})' \
+    --match_escalation_threshold -1 \
+    --n_workers 1 \
+    --sort_keys -_score
   ```
+
+  We don't want to match a keyword that is registered as stopword.
+  However, If this problem occur, Groonga returns match record even if we search the stopword.
+  Because if we use `query_parallel_or`, `match_escalation_threshold` doesn't work.
 
 * Fixed a bug where full-text search on a reference column of a vector didn't work.
 
