Remove needless explanation

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -52,7 +52,7 @@
 
 * Fixed a bug where full-text search on a reference column of a vector didn't work.
 
-  For exampe, before the fix, Groonga always returned 0 hits when performing full-text search on a reference column of a vector. Internally, this happened because Groonga couldn't correctly retrieve `key_type` for reference columns.
+  For exampe, before the fix, Groonga always returned 0 hits when performing full-text search on a reference column of a vector.
 
   ```
   table_create bugs TABLE_PAT_KEY UInt32
