Fix wrong English

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -8,7 +8,7 @@
 * [{doc}`/reference/functions/query_parallel_or`] Fixed a bug where the [{ref}`select-match-escalation-threshold`] or `force_match_escalation` options were ignored when using `query_parallel_or`.
 
   Before the fix, even when `match_escalation_threshold` was set to disable match escalation, the results still escalated.
-  This problem occured only `query_parallel_or()`. `query()` didn't occur this problem.
+  This problem occured only `query_parallel_or()`. `query()` don't occur this problem.
 
   Generally, we don't disable match escalation. Because we want to get something search results. The number of hits is 0 is the unwelcome result of us. 
   Therefore, this problem has no effect by many users. However, it has effect by user who use stop word as below.
