--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -52,7 +52,10 @@
 
 * Fixed a bug where full-text search on a reference column of a vector didn't work.
 
-  For exampe, before the fix, Groonga always returned 0 hits when performing full-text search on a reference column of a vector.
+  This problem occured v14.0.0 or later.
+
+  We expecte that Groonga returns `[1, "Linux MySQL"]` and `[2, "MySQL Groonga"]` as below example.
+  However, Groonga always returned 0 hits when performing full-text search on a reference column of a vector as below.
 
   ```
   table_create bugs TABLE_PAT_KEY UInt32
@@ -75,6 +78,8 @@
   select --table bugs --filter 'tags @ "MySQL"'
   [[0,0.0,0.0],[[[0],[["_id","UInt32"],["_key","UInt32"],["tags","tags"]]]]]
   ```
+
+  This problem has effect if we execute full-text search against a reference column of a vector.
 
 (release-14-0-3)=
 ## Release 14.0.3 - 2024-05-09
