--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -5,7 +5,7 @@
 
 ### Fixes
 
-* [{doc}`/reference/functions/query_parallel_or`] Fixed a bug where the {ref}`select-match-escalation-threshold` or `force_match_escalation` options were ignored when using {doc}`/reference/functions/query_parallel_or`.
+* [{doc}`/reference/functions/query_parallel_or`] Fixed a bug where the {ref}`select-match-escalation-threshold` or `force_match_escalation` options were ignored when using {doc}`/reference/functions/query_parallel_or`
 
   Before the fix, even when `match_escalation_threshold` was set to disable match escalation, the results still escalated.
   This problem occured only `query_parallel_or()`. {doc}`/reference/functions/query` don't occur this problem.
@@ -50,7 +50,7 @@
   However, If this problem occur, Groonga returns match record even if we search the stopword.
   Because if we use `query_parallel_or`, `match_escalation_threshold` doesn't work.
 
-* Fixed a bug where full-text search on a reference column of a vector didn't work.
+* Fixed a bug where full-text search on a reference column of a vector didn't work
 
   This problem occured v14.0.0 or later.
 
