--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -54,7 +54,7 @@
 
   This problem occured v14.0.0 or later.
 
-  We expecte that Groonga returns `[1, "Linux MySQL"]` and `[2, "MySQL Groonga"]` as below example.
+  We expected that Groonga returns `[1, "Linux MySQL"]` and `[2, "MySQL Groonga"]` as below example.
   However, Groonga always returned 0 hits when performing full-text search on a reference column of a vector as below.
 
   ```
