--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -5,7 +5,7 @@
 
 ### Fixes
 
-* [{doc}`/reference/functions/query_parallel_or`] Fixed a bug where the {ref}`select-match-escalation-threshold` or `force_match_escalation` options were ignored when using {doc}`/reference/functions/query_parallel_or`
+* [{doc}`/reference/functions/query_parallel_or`] Fixed a bug that the {ref}`select-match-escalation-threshold` or `force_match_escalation` options were ignored when using {doc}`/reference/functions/query_parallel_or`
 
   Before the fix, even when `match_escalation_threshold` was set to disable match escalation, the results still escalated.
   This problem occurred only `query_parallel_or()`. {doc}`/reference/functions/query` don't occur this problem.
