--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -7,7 +7,7 @@
 
 * [{doc}`/reference/functions/query_parallel_or`] Fixed a bug that the {ref}`select-match-escalation-threshold` or `force_match_escalation` options were ignored when using `query_parallel_or()`.
 
-  Before the fix, even when `match_escalation_threshold` was set to disable match escalation, the results still escalated.
+  Before the fix, even when `match_escalation_threshold` was set to disable match escalation, the results still escalated when we use `query_parallel_or()`.
   This problem occurred only `query_parallel_or()`. {doc}`/reference/functions/query` don't occur this problem.
 
   Generally, we don't disable match escalation. Because we want to get something search results. The number of hits is 0 is the unwelcome result of us. 
