Use more suitable explanation

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -46,15 +46,17 @@
   ```
 
   We don't want to match a keyword that is registered as stopword.
-  However, If this problem occur, Groonga returns match record even if we search the stopword.
-  Because if we use `query_parallel_or`, `match_escalation_threshold` doesn't work.
+  Therefore, we set `-1` to `match_escalation_threshold` in the above example.
+  We expect that Groonga doesn't return records in the above example because of escalation disable and search keyword(`and`) is registered as stopword.
+  However, If this problem occur, Groonga returns match record.
+  Because if we use `query_parallel_or()`, `match_escalation_threshold` doesn't work.
 
-* Fixed a bug where full-text search on a reference column of a vector didn't work
+* Fixed a bug that full-text search againt a reference column of a vector didn't work.
 
-  This problem occured v14.0.0 or later.
+  This problem has occured Groonga v14.0.0 or later.
 
   We expected that Groonga returns `[1, "Linux MySQL"]` and `[2, "MySQL Groonga"]` as below example.
-  However, Groonga always returned 0 hits when performing full-text search on a reference column of a vector as below.
+  However, Groonga always returned 0 hits because of we executed full-text search on a reference column of a vector.
 
   ```
   table_create bugs TABLE_PAT_KEY UInt32
