Use more suitable explanation

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -54,9 +54,10 @@
 * Fixed a bug that full-text search againt a reference column of a vector didn't work.
 
   This problem has occured Groonga v14.0.0 or later.
+  This problem has effect if we execute full-text search against a reference column of a vector.
 
   We expected that Groonga returns `[1, "Linux MySQL"]` and `[2, "MySQL Groonga"]` as below example.
-  However, Groonga always returned 0 hits because of we executed full-text search on a reference column of a vector.
+  However, before the fix, Groonga always returned 0 hits as below because of we executed full-text search on a reference column of a vector.
 
   ```
   table_create bugs TABLE_PAT_KEY UInt32
@@ -79,8 +80,6 @@
   select --table bugs --filter 'tags @ "MySQL"'
   [[0,0.0,0.0],[[[0],[["_id","UInt32"],["_key","UInt32"],["tags","tags"]]]]]
   ```
-
-  This problem has effect if we execute full-text search against a reference column of a vector.
 
 (release-14-0-3)=
 ## Release 14.0.3 - 2024-05-09
