--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -78,7 +78,34 @@
   column_create tags bugs_tags_index COLUMN_INDEX bugs tags
 
   select --table bugs --filter 'tags @ "MySQL"'
-  [[0,0.0,0.0],[[[0],[["_id","UInt32"],["_key","UInt32"],["tags","tags"]]]]]
+  [
+    [
+      0,
+      0.0,
+      0.0
+    ],
+    [
+      [
+        [
+          0
+        ],
+        [
+          [
+            "_id",
+            "UInt32"
+          ],
+          [
+            "_key",
+            "UInt32"
+          ],
+          [
+            "tags",
+            "tags"
+          ]
+        ]
+      ]
+    ]
+  ]
   ```
 
 (release-14-0-3)=
