--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,3 +1,9 @@
+groonga (14.0.4-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Horimoto Yasuhiro <horimoto@clear-code.com>  Tue, 28 May 2024 08:48:42 -0000
+
 groonga (14.0.3-1) unstable; urgency=low
 
   * New upstream release.
