doc news: add 14.0.5 entry

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -1,5 +1,39 @@
 # News - 14 series
 
+(release-14-0-5)=
+## Release 14.0.5 - 2024-06-29
+
+### Fixes
+
+* [{doc}`/reference/functions/query`] `query()`のAND検索とOR検索検索を 'A || query("...", "B C")' の順で組み合わせたときに、誤った順序で評価される問題を修正しました。
+
+  以下の例では、`memo @ "Groonga`の条件がマッチする`{"name": "Alice", "memo": "Groonga user"}`がヒットするはずですが、
+  この問題が発生した場合はヒットしません。したがって、下記の例では何もヒットしません。
+
+  ```
+  table_create Users TABLE_NO_KEY
+  column_create Users name COLUMN_SCALAR ShortText
+  column_create Users memo COLUMN_SCALAR ShortText
+
+  load --table Users
+  [
+  {"name": "Alice", "memo": "Groonga user"},
+  {"name": "Bob",   "memo": "Rroonga user"}
+  ]
+  select Users \
+    --output_columns 'name, memo, _score' \
+    --filter 'memo @ "Groonga" || query("name", "Bob Rroonga")'
+  [[0,0.0,0.0],[[[0],[["name","ShortText"],["memo","ShortText"],["_score","Int32"]]]]]
+  ```
+
+  修正後は、以下のように`{"name": "Alice", "memo": "Groonga user"}`がヒットします。
+  この問題は、以下が発生条件なので、`query()`を単独で使用している場合や、`query()`内でAND検索をしていない場合は
+  問題ありません。
+
+    * OR検索と`query()`を組み合わせて使っていること
+    * `query()`内でAND検索していること
+    * 'A || query("...", "B C")'の順序で条件式が記述されていること
+
 (release-14-0-4)=
 ## Release 14.0.4 - 2024-05-29
 
