--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -34,6 +34,11 @@
     * `query()`内でAND検索していること
     * 'A || query("...", "B C")'の順序で条件式が記述されていること
 
+* [{doc}`/reference/commands/select`] `--query "A* OR B"`のように先に前方一致検索を評価する条件が、誤った検索結果を返すことがある問題を修正しました。
+
+  この問題は先に前方一致検索を評価する条件の時に発生する可能性があります。 `--query A OR B*`のように最後に前方一致検索を評価するケースでは発生しません。
+  この問題が発生すると、例えば、`--query "A* OR B"`という条件では、`A`だけでなく`B`も前方一致検索として評価されてしまい`B`の検索結果が誤ったものになります。
+
 (release-14-0-4)=
 ## Release 14.0.4 - 2024-05-29
 
