doc news: add missing markup

--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -71,7 +71,7 @@
 
     * OR検索と`query()`を組み合わせて使っていること
     * `query()`内でAND検索していること
-    * 'A || query("...", "B C")'の順序で条件式が記述されていること
+    * `'A || query("...", "B C")'`の順序で条件式が記述されていること
 
 * [{doc}`/reference/commands/select`] `--query "A* OR B"`のように先に前方一致検索を評価する条件が、誤った検索結果を返すことがある問題を修正しました。
 
