--- a/doc/locale/ja/LC_MESSAGES/news/14.po
+++ b/doc/locale/ja/LC_MESSAGES/news/14.po
@@ -17,11 +17,44 @@ msgstr ""
 msgid "News - 14 series"
 msgstr "お知らせ - 14系"
 
-msgid "Release 14.0.4 - 2024-05-29"
-msgstr "14.0.4リリース - 2024-05-29"
+msgid "Release 14.0.5 - 2024-06-29"
+msgstr "14.0.5リリース - 2024-06-29"
 
 msgid "Fixes"
 msgstr "修正"
+
+msgid "[{doc}`/reference/functions/query`] `query()`のAND検索とOR検索検索を 'A || query(\"...\", \"B C\")' の順で組み合わせたときに、誤った順序で評価される問題を修正しました。"
+msgstr "[{doc}`/reference/functions/query`] `query()`のAND検索とOR検索検索を 'A || query(\"...\", \"B C\")' の順で組み合わせたときに、誤った順序で評価される問題を修正しました。"
+
+msgid "以下の例では、`memo @ \"Groonga`の条件がマッチする`{\"name\": \"Alice\", \"memo\": \"Groonga user\"}`がヒットするはずですが、 この問題が発生した場合はヒットしません。したがって、下記の例では何もヒットしません。"
+msgstr "以下の例では、`memo @ \"Groonga`の条件がマッチする`{\"name\": \"Alice\", \"memo\": \"Groonga user\"}`がヒットするはずですが、 この問題が発生した場合はヒットしません。したがって、下記の例では何もヒットしません。"
+
+msgid "修正後は、以下のように`{\"name\": \"Alice\", \"memo\": \"Groonga user\"}`がヒットします。"
+msgstr "修正後は、以下のように`{\"name\": \"Alice\", \"memo\": \"Groonga user\"}`がヒットします。"
+
+msgid "この問題は、以下が発生条件なので、`query()`を単独で使用している場合や、`query()`内でAND検索をしていない場合は問題ありません。"
+msgstr "この問題は、以下が発生条件なので、`query()`を単独で使用している場合や、`query()`内でAND検索をしていない場合は問題ありません。"
+
+msgid "OR検索と`query()`を組み合わせて使っていること"
+msgstr "OR検索と`query()`を組み合わせて使っていること"
+
+msgid "`query()`内でAND検索していること"
+msgstr "`query()`内でAND検索していること"
+
+msgid "`'A || query(\"...\", \"B C\")'`の順序で条件式が記述されていること"
+msgstr "`'A || query(\"...\", \"B C\")'`の順序で条件式が記述されていること"
+
+msgid "[{doc}`/reference/commands/select`] `--query \"A* OR B\"`のように先に前方一致検索を評価する条件が、誤った検索結果を返すことがある問題を修正しました。"
+msgstr "[{doc}`/reference/commands/select`] `--query \"A* OR B\"`のように先に前方一致検索を評価する条件が、誤った検索結果を返すことがある問題を修正しました。"
+
+msgid "この問題は先に前方一致検索を評価する条件の時に発生する可能性があります。 `--query A OR B*`のように最後に前方一致検索を評価するケースでは発生しません。"
+msgstr "この問題は先に前方一致検索を評価する条件の時に発生する可能性があります。 `--query A OR B*`のように最後に前方一致検索を評価するケースでは発生しません。"
+
+msgid "この問題が発生すると、以下の`--query \"Bo* OR li\"`という条件が、`Bo`も`li`も前方一致検索として評価されてしまい`li`の検索結果が誤ったものになります。 `Alice`がヒットするのが期待値ですが、以下のように何もヒットしません。これは、前述の通り`li`が前方一致検索として評価されてしまうためです。"
+msgstr "この問題が発生すると、以下の`--query \"Bo* OR li\"`という条件が、`Bo`も`li`も前方一致検索として評価されてしまい`li`の検索結果が誤ったものになります。 `Alice`がヒットするのが期待値ですが、以下のように何もヒットしません。これは、前述の通り`li`が前方一致検索として評価されてしまうためです。"
+
+msgid "Release 14.0.4 - 2024-05-29"
+msgstr "14.0.4リリース - 2024-05-29"
 
 msgid "[{doc}`/reference/functions/query_parallel_or`] Fixed a bug that the {ref}`select-match-escalation-threshold` or `force_match_escalation` options were ignored when using `query_parallel_or()`."
 msgstr "[{doc}`/reference/functions/query_parallel_or`] `query_parallel_or()`を使用すると、{ref}`select-match-escalation-threshold` または `force_match_escalation` オプションが無視される問題を修正しました。"
